bk_ida/gccida/c3/output_addressed_constants
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_addressed_constants/src/varasm.c:4702:10: error: conflicting types for 'output_addressed_constants'
__int64  output_addressed_constants( tree exp) 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_addressed_constants/src/varasm.c:163:12: note: previous declaration is here
static int output_addressed_constants   PARAMS ((tree));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_addressed_constants/src/varasm.c:4711:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_addressed_constants/src/varasm.c:4717:12: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
elements = lang_hooks_0.expand_constant( exp); 
           ^~~~~~~~~~~~
           lang_hooks
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_addressed_constants/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_addressed_constants/src/varasm.c:4717:40: error: called object type '<dependent type>' is not a function or function pointer
elements = lang_hooks_0.expand_constant( exp); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_addressed_constants/src/varasm.c:4735:19: error: expected expression
v8 = ( tree_node *)high[4]; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_addressed_constants/src/varasm.c:4735:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)high[4]; 
       ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_addressed_constants/src/obj/varasm.o] Error 1
